fix overflow in HTML blocks, specifically organization info on courses

--- a/style/core.css
+++ b/style/core.css
@@ -84,3 +84,8 @@ ul {
     display: block;
     position: static;
 }
+
+.no-overflow {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
